tests/parsing/bad/multiple_errors.catala_en
## Multiple parsing errors

```catala
declaration scope A:
  caca scope S
  output i content decimal

scope A:
  definition i equals le caca+
  assertion (x = 3)in
  definition i equals 3.2
  definition i equals le caca
```


0: begin_code / misc. fences  => end_code

1 : declaration <ident> / declaration scope / scope => [1] | [end 0]

2 : definition / assertion (:() / input / context / <ident> scope => [2] | [end 1]
